[project]
name = "my-modules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SeshuTarapatla", email = "seshu.tarapatla@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "kubernetes>=35.0.0",
    "psycopg2-binary>=2.9.11",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.47",
    "telethon>=1.42.0",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
