[project]
name = "my-modules"
version = "0.1.0"
description = "My custom Python modules and scripts for reusability."
readme = "README.md"
authors = [
    { name = "SeshuTarapatla", email = "seshu.tarapatla@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "adbutils>=2.12.0",
    "kubernetes>=35.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.48",
    "telethon>=1.42.0",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
